@@ -4,6 +4,7 @@ Name[es]=Kal
 Language=en_US
 Gender=male
 Preload=false
+VolumeAdjustable=true
 RateAdjustable=true
 PitchAdjustable=true
 Comment=American Male
@@ -15,6 +16,7 @@ Name[es]=Ked
 Language=en_US
 Gender=male
 Preload=false
+VolumeAdjustable=true
 RateAdjustable=true
 PitchAdjustable=true
 Comment=American Male
@@ -26,6 +28,7 @@ Name[es]=Us1
 Language=en_US
 Gender=female
 Preload=false
+VolumeAdjustable=true
 RateAdjustable=true
 PitchAdjustable=true
 Comment=American Female, MBROLA
@@ -37,6 +40,7 @@ Name[es]=Us2
 Language=en_US
 Gender=male
 Preload=false
+VolumeAdjustable=true
 RateAdjustable=true
 PitchAdjustable=true
 Comment=American Male, MBROLA
@@ -48,6 +52,7 @@ Name[es]=Us3
 Language=en_US
 Gender=male
 Preload=false
+VolumeAdjustable=true
 RateAdjustable=true
 PitchAdjustable=true
 Comment=American Male, MBROLA
@@ -59,6 +64,7 @@ Name[es]=Don
 Language=en_GB
 Gender=male
 Preload=false
+VolumeAdjustable=true
 RateAdjustable=true
 PitchAdjustable=true
 Comment=British Male
@@ -70,6 +76,7 @@ Name[es]=Rab
 Language=en_GB
 Gender=male
 Preload=false
+VolumeAdjustable=true
 RateAdjustable=true
 PitchAdjustable=true
 Comment=British Male
@@ -81,6 +88,7 @@ Name[es]=El
 Language=es
 Gender=male
 Preload=false
+VolumeAdjustable=true
 RateAdjustable=true
 PitchAdjustable=true
 Comment=Castilian Spanish Male
@@ -92,8 +100,9 @@ Name[es]=Bdl ARCTIC
 Language=en_US
 Gender=male
 Preload=false
-RateAdjustable=true
-PitchAdjustable=true
+VolumeAdjustable=true
+RateAdjustable=false
+PitchAdjustable=false
 Comment=American Male, HTS
 Comment[es]=Americano masculino, HTS
 
@@ -103,8 +112,9 @@ Name[es]=Slt ARCTIC
 Language=en_US
 Gender=female
 Preload=false
-RateAdjustable=true
-PitchAdjustable=true
+VolumeAdjustable=true
+RateAdjustable=false
+PitchAdjustable=false
 Comment=American Female, HTS
 Comment[es]=Americana femenina, HTS
 
@@ -114,8 +124,9 @@ Name[es]=Jmk ARCTIC
 Language=en_CA
 Gender=male
 Preload=false
-RateAdjustable=true
-PitchAdjustable=true
+VolumeAdjustable=true
+RateAdjustable=false
+PitchAdjustable=false
 Comment=Canadian English Male, HTS
 
 [cmu_us_awb_arctic_hts]
@@ -124,8 +135,9 @@ Name[es]=Awb ARCTIC
 Language=en_GB
 Gender=male
 Preload=false
-RateAdjustable=true
-PitchAdjustable=true
+VolumeAdjustable=true
+RateAdjustable=false
+PitchAdjustable=false
 Comment=Scottish Male, HTS
 Comment[es]=Americano masculino, HTS
 
@@ -135,8 +147,9 @@ Name[es]=Ked Timit
 Language=en_US
 Gender=male
 Preload=false
-RateAdjustable=true
-PitchAdjustable=true
+VolumeAdjustable=true
+RateAdjustable=false
+PitchAdjustable=false
 Comment=American Male, HTS
 Comment[es]=Americano masculino, HTS
 
@@ -146,6 +159,7 @@ Name[es]=Jmk MultiSyn
 Language=en_CA
 Gender=male
 Preload=true
+VolumeAdjustable=true
 RateAdjustable=false
 PitchAdjustable=false
 Comment=Canadian English Male, MultiSyn
@@ -156,6 +170,7 @@ Name[es]=Awb MultiSyn
 Language=en_GB
 Gender=male
 Preload=true
+VolumeAdjustable=true
 RateAdjustable=false
 PitchAdjustable=false
 Comment=Scottish Male, MultiSyn
